--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@element-plus/nuxt": "^1.0.9",
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "^1.0.0",
     "@nuxtjs/color-mode": "^3.3.0",
@@ -46,6 +47,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
+    "element-plus": "^2.8.0",
     "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.6.1",
     "pinia": "^2.1.7",
